fix overflow

--- a/app/assets/style/_layout.scss
+++ b/app/assets/style/_layout.scss
@@ -1,5 +1,5 @@
 body {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 .darkShady {
   display: none;
@@ -7,14 +7,21 @@ body {
 .navbar {
   z-index: 1;
 }
+.l-header {
+  position: relative;
+}
 .nav-menu {
   position: absolute;
   left: -120%;
   width: 100%;
   top: 0;
   height: 100vh;
+  overflow: hidden;
   transition: left 0.8s;
   z-index: 120;
+}
+.position-relative {
+  top: -60;
 }
 .nav-menu.active {
   left: 0;
@@ -64,7 +71,7 @@ body {
 }
 .shopping-cart-page {
   position: absolute;
-  left: 200%;
+  left: 101%;
   top: 0;
   width: 100%;
   height: 100vh;
@@ -74,6 +81,7 @@ body {
 }
 .shopping-cart-page.active {
   left: 0;
+  overflow: hidden;
 }
 .cartList_title {
   font-size: 24px;
@@ -106,6 +114,7 @@ body {
     width: 100%;
     height: 100vh;
     position: absolute;
+    overflow: hidden;
     z-index: 100;
     opacity: 0.5;
   }
